@@ -16,7 +16,7 @@ Size=200,100
 
 [Window][Host Window]
 Pos=-3,0
-Size=320,550
+Size=267,397
 
 [Window][Host Details]
 Pos=60,60
